--- a/css/custom-bs.css
+++ b/css/custom-bs.css
@@ -57,7 +57,7 @@ body {
   line-height: 1.5;
   color: #7f848c;
   text-align: left;
-  background-color: #fff; }
+  background-color: #001f42; }
 
 [tabindex="-1"]:focus {
   outline: 0 !important; }
