--- a/css/custom-bs.css
+++ b/css/custom-bs.css
@@ -6617,7 +6617,8 @@ button.bg-dark:focus {
 
 .mb-4,
 .my-4 {
-  margin-bottom: 1.5rem !important; }
+  margin-bottom: 1.5rem !important;
+  color: #FFF }
 
 .ml-4,
 .mx-4 {
